--- a/ansible/roles/insight-loadtables/tasks/database-setup.yml
+++ b/ansible/roles/insight-loadtables/tasks/database-setup.yml
@@ -113,6 +113,7 @@
     - ALTER ROLE readonly RESOURCE QUEUE reporting;
     - alter user readonly set random_page_cost=20;
     - alter user readonly set optimizer=on;
+    - alter role palette_etl_user  CREATEEXTTABLE;
 
 
 
