added initial metadata for the initial loadtables

--- a/ansible/aws-hosts2.ini
+++ b/ansible/aws-hosts2.ini
@@ -1,7 +1,9 @@
 [early-adopter]
-bsci-insight.palette-software.net splunk_host=BSCI-PROD2 cluster_name=bsci
-netflix-insight.palette-software.net splunk_host=NETFLIX2 cluster_name=netflix-cluster01
-hdi-insight.palette-software.net splunk_host=HDI cluster_name=hdi
+#bsci-insight.palette-software.net splunk_host=BSCI-PROD2 cluster_name=bsci
+netflix-insight.palette-software.net splunk_host=NETFLIX2 cluster_name=netflix-cluster01 tableau_version=9.2.4
+#hdi-insight.palette-software.net splunk_host=HDI cluster_name=hdi
+#;gpfdist-test splunk_host=GPFDIST-TEST cluster_name=Staging
+#;isi-qa splunk_host=ISI-QA cluster_name=isi-qa
 
 
 [early-adopter:vars]
@@ -10,4 +12,3 @@ channel=early_adopter
 
 [insight-server:children]
 early-adopter
-
