create insight user from ansible, do initial loadtables via async. Note: this requires ansible 2.2

--- a/ansible/roles/insight-loadtables/tasks/crontab-tasks.yml
+++ b/ansible/roles/insight-loadtables/tasks/crontab-tasks.yml
@@ -19,5 +19,5 @@
   cron: user=insight name="Palette Insight Load Tables" job="{{ insight_talend_location }}/load_tables.sh"
 
 - name: Add reporting to crontab (every five minutes)
-  cron: user=insight name="Palette Insight Load Tables" minute="5-55/5" job="{{ insight_talend_location }}/load_tables.sh"
+  cron: user=insight name="Palette Insight Reporting" minute="5-55/5" job="{{ insight_talend_location }}/run_reporting.sh"
 
