--- a/ansible/roles/insight-loadtables/tasks/talend-jobs.yml
+++ b/ansible/roles/insight-loadtables/tasks/talend-jobs.yml
@@ -12,13 +12,15 @@
 - name: Create log4j.xml for Talend LoadTables
   template: src=loadtables.log4j.xml dest={{ insight_talend_location }}/Palette_Insight_Init_ImportTable/log4j.xml mode=644
 
+- name: Create log4j.xml for Talend Reporting
+  template: src=reporting.log4j.xml dest={{ insight_talend_location }}/Palette_Insight_Init_Reporting/log4j.xml mode=644
+
 - name: Create the talend runner scripts
   template: src={{ item }} dest={{ insight_talend_location }}/{{ item }} owner=insight group=insight mode=755
   with_items:
     - load_tables.sh
     - load_tables_nolock.sh
     - run_reporting.sh
-
 
 #- name: Create the load_tables.sh script
   #template: src=load_tables.sh dest={{ insight_talend_location }}/load_tables.sh owner=insight group=insight mode=755
