--- a/ansible/roles/insight-loadtables/vars/main.yml
+++ b/ansible/roles/insight-loadtables/vars/main.yml
@@ -1,4 +1,10 @@
 ---
+# VERSIONS
+#
+insight_datamodel_version: v1.1.17.1
+
+
+
 insight_talend_location: /opt/palette-insight-talend
 insight_reporting_location: /opt/palette-insight-reporting
 greenplum_install_path: /usr/local/greenplum-db
