fix for new installs: * create insight user with proper group * make update packages async so it does not time out

--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -1,6 +1,8 @@
 ---
 - name: update packages
   yum: name=* state=latest
+  async: 3600 # 60 minutes max runtime allowed
+  poll: 10
 
 - name: install ca package on rhel systems
   yum:
