use the proper user for the dummy error table

--- a/ansible/aws-hosts2.ini
+++ b/ansible/aws-hosts2.ini
@@ -1,9 +1,8 @@
 [early-adopter]
-#bsci-insight.palette-software.net splunk_host=BSCI-PROD2 cluster_name=bsci
-;netflix-insight.palette-software.net splunk_host=NETFLIX2 cluster_name=netflix-cluster01 tableau_version=9.2.4
+bsci-insight.palette-software.net splunk_host=BSCI-PROD cluster_name=bsci tableau_version=9.2.4
+netflix-insight.palette-software.net splunk_host=NETFLIX cluster_name=netflix-cluster01 tableau_version=9.2.4
 
 #hdi-insight.palette-software.net splunk_host=HDI cluster_name=hdi
-#;gpfdist-test splunk_host=GPFDIST-TEST cluster_name=Staging
 #;isi-qa splunk_host=ISI-QA cluster_name=isi-qa
 usf-insight splunk_host=USF cluster_name=usf tableau_version=9.2.0 hostname_fqdn=usf-insight.palette-software.net
 
