fix: delete boot volume on terminate, tag instances properly,

--- a/ansible/aws-hosts2.ini
+++ b/ansible/aws-hosts2.ini
@@ -9,6 +9,8 @@ usf-insight splunk_host=USF cluster_name=usf tableau_version=9.2.0 hostname_fqdn
 
 [early-adopter:vars]
 channel=early_adopter
+uservar=centos
+insight_datamodel_version=v1.1.17.1
 
 
 [insight-server:children]
