--- a/ansible/migrate-gp2-volumes-to-io1.yml
+++ b/ansible/migrate-gp2-volumes-to-io1.yml
@@ -3,7 +3,7 @@
   hosts: 127.0.0.1
   connection: local
   gather_facts: False
-  remote_user: ubuntu
+  remote_user: centos
   vars:
     vpc_id: vpc-88e89aec
     project_name: "insight-ebs-migrate"
@@ -23,9 +23,14 @@
   hosts: ec2_hosts
   sudo: yes
   sudo_user: root
-  remote_user: ubuntu
+  remote_user: centos
   vars:
+    project_name: "insight-ebs-migrate"
+    # env name, this will be used as an inventory file name
+    env: "staging"
+    # remote user
     app_code_user: "centos"
+    ansible_ssh_private_key_file: "./aws-{{ project_name }}-{{ env }}-private.pem"
   roles:
     - ec2-users
 
