--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -41,12 +41,6 @@
 - name: Sudo tabcompletion
   lineinfile: dest=/etc/profile regexp='^complete -cf sudo$' line='complete -cf sudo'
 
+- name: Set the server timezone to UTC
+  include: "utc_timezone.yml"
 
-- name: Check current timezone
-  shell: awk -F\" '{ print $2}' /etc/sysconfig/clock
-  register: current_zone
-  changed_when: False
-
-- name: Set UTC timezone
-  file: src=/usr/share/zoneinfo/UTC  dest=/etc/localtime state=link force=yes
-  when: current_zone.stdout != 'UTC'
