add initscript for greenplum

--- a/ansible/aws-hosts2.ini
+++ b/ansible/aws-hosts2.ini
@@ -1,16 +1,17 @@
 [early-adopter]
-bsci-insight.palette-software.net splunk_host=BSCI-PROD cluster_name=bsci tableau_version=9.2.4
-netflix-insight.palette-software.net splunk_host=NETFLIX cluster_name=netflix-cluster01 tableau_version=9.2.4
+;bsci-insight.palette-software.net splunk_host=BSCI-PROD cluster_name=bsci tableau_version=9.2.4
+;netflix-insight.palette-software.net splunk_host=NETFLIX cluster_name=netflix-cluster01 tableau_version=9.2.4
 
 #hdi-insight.palette-software.net splunk_host=HDI cluster_name=hdi
 #;isi-qa splunk_host=ISI-QA cluster_name=isi-qa
-usf-insight splunk_host=USF cluster_name=usf tableau_version=9.2.0 hostname_fqdn=usf-insight.palette-software.net
+;usf-insight splunk_host=USF cluster_name=usf tableau_version=9.2.0 hostname_fqdn=usf-insight.palette-software.net
+staging-next.palette-software.net splunk_host=STAGING-NEXT cluster_name=staging tableau_version=9.2.4
 
 
 [early-adopter:vars]
 channel=early_adopter
 uservar=centos
-insight_datamodel_version=v1.1.17.1
+insight_datamodel_version=v1.2.3
 
 
 [insight-server:children]
