--- a/ansible/roles/greenplum-data/vars/main.yml
+++ b/ansible/roles/greenplum-data/vars/main.yml
@@ -1,6 +1,7 @@
 ---
 greenplum_install_dir: "{{ greenplum_prefix }}/greenplum-db-{{ greenplum_version_target }}"
 greenplum_datadir: /data
+greenplum_master_datadir: /data/master/gpsne-1
 greenplum_download_url: http://rpm.palette-software.net/install/greenplum/{{ greenplum_zip }}
 
 greenplum_hosts_file: /etc/gphosts
