start the greenplum service after install

--- a/ansible/roles/greenplum-data/tasks/main.yml
+++ b/ansible/roles/greenplum-data/tasks/main.yml
@@ -30,3 +30,6 @@
 - name: Updating chkconfig for GreenPlum
   shell: chkconfig --add greenplum
 
+- name: Greenplim service start & enable on restart
+  service: name=greenplum state=started enabled=yes
+
