--- a/ansible/roles/greenplum-data/tasks/main.yml
+++ b/ansible/roles/greenplum-data/tasks/main.yml
@@ -30,6 +30,9 @@
 - name: Updating chkconfig for GreenPlum
   shell: chkconfig --add greenplum
 
-- name: Greenplim service start & enable on restart
+- name: Create /var/log directory for greenplum logs
+  file: path=/var/log/greenplum owner=root group=gpadmin state=directory mode="u=rwx,g=rwx,o="
+
+- name: Greenplum service start & enable on restart
   service: name=greenplum state=started enabled=yes
 
