--- a/ansible/roles/insight-loadtables/tasks/main.yml
+++ b/ansible/roles/insight-loadtables/tasks/main.yml
@@ -20,5 +20,5 @@
 - include: "crontab-tasks.yml"
 
 - name: Create the insight-services shell script to gracefully stop and start greenplum and related components
-  copy: src=insight-services.sh dest=/usr/local/bin owner=root group=root mode=0755
+  copy: src=insight-services.sh dest=/usr/local/bin/insight-services owner=root group=root mode=0755
 
