--- a/ansible/first-time-setup.yml
+++ b/ansible/first-time-setup.yml
@@ -1,5 +1,5 @@
 ---
-- name: First time setup & install of a Palette Insight Server machine
+- name: Provision / update a Palette Insight Server machine
   hosts: insight-server
   remote_user: "{{ uservar }}"
   become: yes
@@ -8,6 +8,7 @@
   roles:
     - common
     - xfs-init
+    - tmpfs
     - palette-dev-tools
     - nginx
     - supervisor
