--- a/ansible/insight-server.yml
+++ b/ansible/insight-server.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install / Upgrade Palette Insight-server
-  hosts: insight-server
+  hosts: "{{ channel }}"
   remote_user: "{{ uservar }}"
   become: yes
   become_user: root
